--- a/templates/base.html
+++ b/templates/base.html
@@ -15,10 +15,10 @@
 				{% if request.user.is_authenticated %}
 					<div class="text-white">Hello, <strong>{{ request.user.username }}</strong>!</div>
 						<a href="#" class="btn btn-success ml-4">New Page</a>
-						<a href="accounts/logout" class="btn btn-danger ml-2">Log Out</a>
+						<a href="{% url 'logout' %}" class="btn btn-danger ml-2">Log Out</a>
 				{% else %}
-					<a href="accounts/login" class="btn btn-secondary ml-2">Log In</a>
-					<a href="accounts/signup" class="btn btn-primary ml-2">Sign Up</a>
+				<a href="{% url 'login' %}" class="btn btn-secondary ml-2">Log In</a>
+					<a href="{% url 'accounts-signup-page' %}" class="btn btn-primary ml-2">Sign Up</a>
 				{% endif %}
       </form>
     </nav>
